--- a/Bài 02.03.2023/index.html
+++ b/Bài 02.03.2023/index.html
@@ -131,6 +131,7 @@ background-color: #f1f1f1;
                     </h1>
                 </div>
                 <div class="topnav">
+                    <a href="/index.html">Trang chủ </a>
                     <a href="/chuot.html">Chuột </a>
                     <a href="/ban-phim.html">Bàn phím</a>
                     <a href="/man-hinh.html">Màn hình</a>
