--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 
 <body>
     <h1>
-        Baì 1
+        Bài 1
     </h1>
     <div class="col-wrap">
-        <div class=" col red" style="width: 600px">
+        <div class=" col red" style="width: 800px">
             <h2>
                 Cột 1
             </h2>
@@ -75,10 +75,10 @@
         </div>
     </div>
     <h1>
-        Baì 2
+        Bài 2
     </h1>
     <div class="col-wrap">
-        <div class=" col red"style="width: 600px">
+        <div class=" col red"style="width: 800px">
             <h2>
                 Cột 1
             </h2>
@@ -124,7 +124,7 @@
         </div>
         <div class="col green">
             <h2>Cột 3</h2>
-        </div>&nbsp
+        </div>
 
     </div>
 </body>
