--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         Bài 1
     </h1>
     <div class="col-wrap">
-        <div class=" col red" style="width: 800px">
+        <div class=" col red" style="width:65%">
             <h2>
                 Cột 1
             </h2>
@@ -77,7 +77,7 @@
         Bài 2
     </h1>
     <div class="col-wrap">
-        <div class=" col red"style="width: 800px">
+        <div class=" col red"style="width: width:65%">
             <h2>
                 Cột 1
             </h2>
