--- a/05.03.2023/chuot.html
+++ b/05.03.2023/chuot.html
@@ -5,32 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
     <title>Chuột máy tính </title>
     <style type="text/css">
         * {
             margin: 0;
             padding: 0;
         }
-/* Mui ten lên dau trang */
-#myBtn {
-display: none;
-position: fixed;
-bottom: 60px;
-right: 10px;
-z-index: 99;
-border: none;
-outline: none;
-background-color: #fff;
-border: 2px solid #ccc;
-color: white;
-cursor: pointer;
-border-radius: 30px;
-opacity: 0.7;
-}
- 
-#myBtn:hover {
-background-color: #f1f1f1;
-}
 
         .header {
             background-color: dimgrey;
@@ -42,7 +23,7 @@ background-color: #f1f1f1;
         h1 {
             margin: 30px;
             text-align: center;
-            color: rgb(88, 8, 78)
+            color: rgb(245, 238, 244)
         }
 
         h2 {
@@ -78,7 +59,7 @@ background-color: #f1f1f1;
             color: black;
         }
         body {
-            background-color: rgb(147, 152, 228);
+            background-image: url("/background.jpg");
         }
 
         .text-centre {
@@ -119,6 +100,7 @@ background-color: #f1f1f1;
                     <a href="/man-hinh.html">Màn hình</a>
                     <a href="/thung-may.html">Thùng máy </a>
                     <a href="/tai-nghe.html">Tai nghe</a>
+                    <a href="/loa.html">Loa</a>
 
                 </div>
 
