--- a/05.03.2023/tai-nghe.html
+++ b/05.03.2023/tai-nghe.html
@@ -5,135 +5,140 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/png" href="/favicon.png" />
   <title>Tai nghe </title>
   <style type="text/css">
-         * {
-            margin: 0;
-            padding: 0;
-        }
-/* Mui ten lên dau trang */
-#myBtn {
-display: none;
-position: fixed;
-bottom: 60px;
-right: 10px;
-z-index: 99;
-border: none;
-outline: none;
-background-color: #fff;
-border: 2px solid #ccc;
-color: white;
-cursor: pointer;
-border-radius: 30px;
-opacity: 0.7;
-}
- 
-#myBtn:hover {
-background-color: #f1f1f1;
-}
+    * {
+      margin: 0;
+      padding: 0;
+    }
 
-        .header {
-            background-color: dimgrey;
-            color: chartreuse;
-            padding: 20px;
-            text-align: center;
-        }
+    /* Mui ten lên dau trang */
+    #myBtn {
+      display: none;
+      position: fixed;
+      bottom: 60px;
+      right: 10px;
+      z-index: 99;
+      border: none;
+      outline: none;
+      background-color: #fff;
+      border: 2px solid #ccc;
+      color: white;
+      cursor: pointer;
+      border-radius: 30px;
+      opacity: 0.7;
+    }
 
-        h1 {
-            margin: 30px;
-            text-align: center;
-            color: rgb(88, 8, 78)
-        }
+    #myBtn:hover {
+      background-color: #f1f1f1;
+    }
 
-        h2 {
-            text-align: center;
-            color: brown;
-            margin: 10px;
-        }
+    .header {
+      background-color: dimgrey;
+      color: chartreuse;
+      padding: 20px;
+      text-align: center;
+    }
 
-        .topnav {
-            overflow: hidden;
-            background-color: #333;
-        }
+    h1 {
+      margin: 30px;
+      text-align: center;
+      color: rgb(241, 236, 241)
+    }
 
-        .footer {
-            background-color: #F1F1F1;
-            text-align: center;
-            padding: 10px;
-        }
+    h2 {
+      text-align: center;
+      color: brown;
+      margin: 10px;
+    }
 
-        /* tạo kiểu cho liên kết */
-        .topnav a {
-            float: left;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
+    .topnav {
+      overflow: hidden;
+      background-color: #333;
+    }
 
-        /* thay đổi màu khi di chuột */
-        .topnav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-        body {
-            background-color: rgb(147, 152, 228);
-        }
+    .footer {
+      background-color: #F1F1F1;
+      text-align: center;
+      padding: 10px;
+    }
 
-        .text-centre {
-            text-align: center;
-        }
+    /* tạo kiểu cho liên kết */
+    .topnav a {
+      float: left;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
 
-        .accordion-header {
-            background-color: #F1F1F1;
-            padding: 10px 10px;
-            margin-bottom: 10px;
-        }
+    /* thay đổi màu khi di chuột */
+    .topnav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
 
-        .accordion-body {
-            background-color: #f2f2f2;
-            display: none;
-        }
+    body {
+      background-image: url("/background.jpg");
+    }
 
-        #wrapper {
-            max-width: 960px;
-            margin: 0%auto;
-        }
+    .text-centre {
+      text-align: center;
+    }
+
+    .accordion-header {
+      background-color: #F1F1F1;
+      padding: 10px 10px;
+      margin-bottom: 10px;
+    }
+
+    .accordion-body {
+      background-color: #f2f2f2;
+      display: none;
+    }
+
+    #wrapper {
+      max-width: 960px;
+      margin: 0%auto;
+    }
   </style>
 </head>
 
 <body>
   <div id="wrapper">
     <div class="text-centre">
-        <font face="Arial" size="5">
-            <div class="header">
-                <h1>
-                    Hero shop
-                </h1>
-            </div>
-            <div class="topnav">
-                <a href="/index.html">Trang chủ </a>
-                <a href="/chuot.html">Chuột </a>
-                <a href="/ban-phim.html">Bàn phím</a>
-                <a href="/man-hinh.html">Màn hình</a>
-                <a href="/thung-may.html">Thùng máy </a>
-                <a href="/tai-nghe.html">Tai nghe</a>
+      <font face="Arial" size="5">
+        <div class="header">
+          <h1>
+            Hero shop
+          </h1>
+        </div>
+        <div class="topnav">
+          <a href="/index.html">Trang chủ </a>
+          <a href="/chuot.html">Chuột </a>
+          <a href="/ban-phim.html">Bàn phím</a>
+          <a href="/man-hinh.html">Màn hình</a>
+          <a href="/thung-may.html">Thùng máy </a>
+          <a href="/tai-nghe.html">Tai nghe</a>
+          <a href="/loa.html">Loa</a>
 
-            </div>
+        </div>
 
-            <h1 style="color: chocolate; background-color: rgb(107, 63, 5); width: auto;margin: auto ">
-                Cung cấp sản phẩm điện tử chất lượng
-            </h1>
-            <div class="accordion-header">
-            <h1>
-              Tai nghe không dây
-            </h1>
-            <div class="accordion-body">
-            </div>
+        <h1 style="color: chocolate; background-color: rgb(107, 63, 5); width: auto;margin: auto ">
+          Cung cấp sản phẩm điện tử chất lượng
+        </h1>
+        <div class="accordion-header">
+          <h1>
+            Tai nghe không dây
+          </h1>
+          <div class="accordion-body">
           </div>
-          <img src="https://soundmax.com.vn/images/2022/ah-335_up-web_2.jpg" width="500" height="400" alt="khong tim thay anh">
-          <img src="https://soundmax.com.vn/images/2021/ah-335_up-web_4.jpg" width="500" height="400" alt="khong tim thay anh">
+          <img src="https://soundmax.com.vn/images/2022/ah-335_up-web_2.jpg" width="500" height="400"
+            alt="khong tim thay anh">
+          <img src="https://soundmax.com.vn/images/2021/ah-335_up-web_4.jpg" width="500" height="400"
+            alt="khong tim thay anh">
           <h2>
             Gaming Soundmax AH335
           </h2>
@@ -156,7 +161,8 @@ background-color: #f1f1f1;
     </div>
   </div>
   </div>
-</div>
+  </div>
+  </div>
   <div class="footer">
     <p>Trang web trực tiếp của Hero shop
     </p>
