--- a/05.03.2023/index.html
+++ b/05.03.2023/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/05.03.2023/main.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/05.03.2023/favicon.png" />
     <title>Hero shop </title>
     <style type="text/css">
         
@@ -65,7 +65,7 @@
         }
 
         body {
-            background-image: url("/background.jpg");
+            background-image: url("05.03.2023/background.jpg");
             display: flex;
         }
 
