--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
         body {
             background-image: url("/background.jpg");
             display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .text-centre {
