--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class="vitrimenu">
             <div id="menu">
                 <ul>
-                    <li><a style="padding-bottom: 10px;" href="#">Trang chủ</a></li>
-                    <li><a style="padding-bottom: 10px;" href="#">Tin tức</a></li>
+                    <li><a href="#">Trang chủ</a></li>
+                    <li><a href="#">Tin tức</a></li>
                     <li><a href="#">Sản phẩm</a></li>
                     <li><a href="#">Liên hệ</a></li>
                     <li><a href="#">Bình luận</a></li>
