--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 </ul>
             </div>
         </div>
+        <div style="margin-left: 20px;">
         <div class="vien">
+            
             <div class="thu-nghiem-zoom">
                 <a href="#">
         <img src="https://cdn.tgdd.vn/Products/Images/42/264060/samsung-galaxy-s23-600x600.jpg" width="30%" height="30%"
@@ -99,6 +101,7 @@
         </a>
         </div>
     </div>
+</div>
 </div>
 <div class="footer">
     Create by Nguyễn Duy Hiếu
