--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
             <font face="Optima" size="25"></font>
             Gundam
            </font><br />
-           </div>   
+           </div> 
+           <div class="dndk">
+            <h2>
+              Đăng nhập
+            </h2>
+            <h1>
+              \
+            </h1>
+            <h2>
+              Đăng ký
+            </h2>
+          </div>  
     </div>
     <input id="box-btn" type="checkbox" style="display:none;">
     <div class="menu">
