--- a/index.html
+++ b/index.html
@@ -1,94 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/main.css">
-    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
-    <title>Bài tập </title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/main.css">
+  <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+  <title>Bài tập </title>
 </head>
+
 <body>
-    <div class="header">      
-           <div class="neon">
-            <font face="Optima" size="25"></font>
-            Gundam
-           </font><br />
-           </div> 
-           <div class="dndk">
-            <h2>
-              Đăng nhập
-            </h2>
-            <h1>
-              \
-            </h1>
-            <h2>
-              Đăng ký
-            </h2>
-          </div>  
+  <div class="header">
+    <div class="neon">
+      <font face="Optima" size="25"></font>
+      Gundam
+      </font><br />
     </div>
-    <input id="box-btn" type="checkbox" style="display:none;">
-    <div class="menu">
-        <h1></h1>
-          <label for="box-btn" class="hamburger">
-            <hr class="bar"></hr>
-            <hr class="bar"></hr>
-            <hr class="bar"></hr>
-          </label>
-          <div class="topnav">
-          <a href="/index.html">Trang chủ </a>
-        <a href="#">Sản phẩm </a>
-        <a href="#">Bình luận</a>
-        <a href="#">Diễn đàn</a>
-        <a href="#">Tư vấn </a>
+    <div class="dndk">
+      <h2>
+        Đăng nhập
+      </h2>
+      <h1>
+        \
+      </h1>
+      <h2>
+        Đăng ký
+      </h2>
     </div>
-      </div>
-</div>
-<div class="wrap">
+  </div>
+  <input id="box-btn" type="checkbox" style="display:none;">
+  <div class="menu">
+    <h1></h1>
+    <label for="box-btn" class="hamburger">
+      <hr class="bar">
+      </hr>
+      <hr class="bar">
+      </hr>
+      <hr class="bar">
+      </hr>
+    </label>
+    <div class="topnav">
+      <a href="/index.html">Trang chủ </a>
+      <a href="#">Sản phẩm </a>
+      <a href="#">Bình luận</a>
+      <a href="#">Diễn đàn</a>
+      <a href="#">Tư vấn </a>
+    </div>
+  </div>
+  </div>
+  <div class="wrap">
     <form action="" class="search" method="post">
-       <input type="text" class="searchTerm" placeholder="Type here">
-       <button type="submit" class="searchButton">
+      <input type="text" class="searchTerm" placeholder="Type here">
+      <button type="submit" class="searchButton">
         <a href="#" style="text-decoration: none;">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            Search
-          </a>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          Search
+        </a>
       </button>
     </form>
- </div>
-<div class="cangiua">
-<div class="bocanh">
-    <img src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-0c546a64-eb4c-40d9-b628-937a879dd9fe.jpg?v=1673416639707" 
-    alt="khong tim thay anh">
-    <img src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-ae368f2d-6e06-42f0-ae2f-8917e1a9eb0b.jpg?v=1667214115760" 
-    alt="khong tim thay anh">
-    <img src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-1a587dea-cba7-4ba8-8823-fd633db8f48b.jpg?v=1673843195757" 
-    alt="khong tim thay anh">
-    <img src="https://lzd-img-global.slatic.net/g/p/a5d6e01c5f252bb2d34802c20a17675b.jpg_720x720q80.jpg_.webp" 
-    alt="khong tim thay anh">
-    <img src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-c12590bf-6a49-4bf8-990d-09233e5dc352.jpg?v=1667214276157" 
-    alt="khong tim thay anh">
-    <img src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo-f191087d-ad60-40c1-b0aa-2341abd8262f.jpg?v=1594976405927" 
-    alt="khong tim thay anh">
-    <img src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-40c51cf4-3ac9-4413-ad50-328a91b6f604.jpg?v=1667214209717" 
-    alt="khong tim thay anh">
-    <img src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-6ec11c98-bd7d-443e-aa41-89d57823fe97.jpg?v=1673842508950" 
-    alt="khong tim thay anh">
-    <img src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-5d815982-0894-4975-8e2c-aa373404f8b4.jpg?v=1622431298520" 
-    alt="khong tim thay anh">
- </div>
- <script>
-    $('.hamburger').click(function(){
-    if($('#box-btn').prop('checked') !== true){
-    $(this).find('.bar').css('width', '30px');
-  }
-  else{
-    $(this).find('.bar').removeAttr('style');
-  }
-  
-})
- </script>
+  </div>
+  <div class="cangiua">
+    <div class="bocanh">
+      <img
+        src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-0c546a64-eb4c-40d9-b628-937a879dd9fe.jpg?v=1673416639707"
+        alt="khong tim thay anh">
+      <img
+        src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-ae368f2d-6e06-42f0-ae2f-8917e1a9eb0b.jpg?v=1667214115760"
+        alt="khong tim thay anh">
+      <img
+        src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-1a587dea-cba7-4ba8-8823-fd633db8f48b.jpg?v=1673843195757"
+        alt="khong tim thay anh">
+      <img src="https://lzd-img-global.slatic.net/g/p/a5d6e01c5f252bb2d34802c20a17675b.jpg_720x720q80.jpg_.webp"
+        alt="khong tim thay anh">
+      <img
+        src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-c12590bf-6a49-4bf8-990d-09233e5dc352.jpg?v=1667214276157"
+        alt="khong tim thay anh">
+      <img
+        src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo-f191087d-ad60-40c1-b0aa-2341abd8262f.jpg?v=1594976405927"
+        alt="khong tim thay anh">
+      <img
+        src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-40c51cf4-3ac9-4413-ad50-328a91b6f604.jpg?v=1667214209717"
+        alt="khong tim thay anh">
+      <img
+        src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-6ec11c98-bd7d-443e-aa41-89d57823fe97.jpg?v=1673842508950"
+        alt="khong tim thay anh">
+      <img
+        src="https://bizweb.dktcdn.net/thumb/large/100/382/833/products/demo1-5d815982-0894-4975-8e2c-aa373404f8b4.jpg?v=1622431298520"
+        alt="khong tim thay anh">
+    </div>
+    <script>
+      $('.hamburger').click(function () {
+        if ($('#box-btn').prop('checked') !== true) {
+          $(this).find('.bar').css('width', '30px');
+        }
+        else {
+          $(this).find('.bar').removeAttr('style');
+        }
+
+      })
+    </script>
 </body>
+
 </html>
