--- a/index.html
+++ b/index.html
@@ -7,197 +7,141 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
     <title>Fly Shop</title>
 </head>
 
 <body>
     <div class="header">
         <h1>
-            SHOP
+            Balita
         </h1>
-    </div>
-
-    <div class="topnavmn">
-        <div class="menuhbg">
-            <ul>
-                <li>
-                    <a href="/index.html">Trang chủ </a>
-                </li>
-                <li>
-                    <div class="dropdownhbg">
-                        <button class="dropbtnhbg">
-
-                            Sản phẩm <i class="fas fa-arrow-down"></i></button>
-
-                        <div class="dropdown-contenthbg">
-                            <ul>
-                                <li><a href="#">Thiết kế website</a></li>
-                                <li><a href="#">Dịch vụ SEO</a></li>
-                                <li><a href="#">Hosting</a></li>
-                            </ul>
-                        </div>
-                </li>
-                <li>
-                    <div class="dropdownhbg">
-                        <button class="dropbtnhbg">
-                            Bình luận <i class="fas fa-arrow-down"></i></button>
-                        <div class="dropdown-contenthbg">
-                            <ul>
-                                <li><a href="#">Năm 2023</a></li>
-                                <li><a href="#">Năm 2022</a></li>
-                                <li><a href="#">Năm 2021</a></li>
-                            </ul>
-                        </div>
-                </li>
-                <li>
-                    <div class="dropdownhbg">
-                        <button class="dropbtnhbg"> Diễn đàn <i class="fas fa-arrow-down"></i>
-                        </button>
-                        <div class="dropdown-contenthbg">
-                            <ul>
-                                <li><a href="#">Chât lượng dịch vụ</a></li>
-                                <li><a href="#">Thông tin sản phẩm mới</a></li>
-                                <li><a href="#">Kế hoạch phát triển</a></li>
-                            </ul>
-                        </div>
-                </li>
-                <li>
-                    <div class="dropdownhbg">
-                        <button class="dropbtnhbg">Tư vấn <i class="fas fa-arrow-down"></i>
-                        </button>
-                        <div class="dropdown-contenthbg">
-                            <ul>
-                                <li><a href="#">Số điện thoại</a></li>
-                                <li><a href="#">Zalo</a></li>
-                                <li><a href="#">Facebook</a></li>
-                            </ul>
-                        </div>
-                </li>
-            </ul>
-        </div>
     </div>
     <div class="topnav">
         <div class="menu">
             <ul>
                 <li>
-                    <a href="/index.html">Trang chủ </a>
-                </li>
-                <li>
-                    <div class="dropdown">
-                        <button class="dropbtn">Sản phẩm</button>
-                        <div class="dropdown-content">
-                            <ul>
-                                <li><a href="#">Thiết kế website</a></li>
-                                <li><a href="#">Dịch vụ SEO</a></li>
-                                <li><a href="#">Hosting</a></li>
-                            </ul>
-                        </div>
-                </li>
-                <li>
-                    <div class="dropdown">
-                        <button class="dropbtn"> Bình luận </button>
-                        <div class="dropdown-content">
-                            <ul>
-                                <li><a href="#">Năm 2023</a></li>
-                                <li><a href="#">Năm 2022</a></li>
-                                <li><a href="#">Năm 2021</a></li>
-                            </ul>
-                        </div>
+                    <div class="den">
+                        <button class="dropbtn"> Home</button>
                     </div>
                 </li>
                 <li>
                     <div class="dropdown">
-                        <button class="dropbtn"> Diễn đàn</button>
-                        <div class="dropdown-content">
-                            <ul>
-                                <li><a href="#">Chât lượng dịch vụ</a></li>
-                                <li><a href="#">Thông tin sản phẩm mới</a></li>
-                                <li><a href="#">Kế hoạch phát triển</a></li>
-                            </ul>
-                        </div>
+                        <button class="dropbtn">Travel</button>
                     </div>
                 </li>
                 <li>
                     <div class="dropdown">
-                        <button class="dropbtn"> Tư vấn </button>
-                        <div class="dropdown-content">
-                            <ul>
-                                <li><a href="#">Số điện thoại</a></li>
-                                <li><a href="#">Zalo</a></li>
-                                <li><a href="#">Facebook</a></li>
-                            </ul>
-                        </div>
+                        <button class="dropbtn"> Categories </button>
+                    </div>
+                </li>
+                <li>
+                    <div class="dropdown">
+                        <button class="but">
+                            <a href="/about.html">About</a> </button>
+                    </div>
+                </li>
+                <li>
+                    <div class="dropdown">
+                        <button class="but">
+                            <a href="/contact.html">Contact</a></button>
                     </div>
                 </li>
             </ul>
         </div>
 
     </div>
+    <div class="boctrai">
+        <div class="menutrai">
+            <h2>
+                Catagories
+            </h2>
+            <ul>
+                <li>
+                    <a href="#">Courses</a>
+                </li>
+                <li>
+                    <a href="#">News</a>
+                </li>
+                <li>
+                    <a href="#">Design</a>
+                </li>
+                <li>
+                    <a href="#">HTML</a>
+                </li>
+                <li>
+                    <a href="#">Web development</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <div class="cangiua">
         <div class="bocanh">
             <div class="container">
-                <img src="https://mac24h.vn/images/thumbnails/350/350/detailed/48/ThinkPad_T14_Gen_2_Mac24h_dyui-wh.png?t=1674486495"
+                <img src="/637728547611527044_msi-modern-15-a5m-234vn-r5-5500u-xam-dd.webp"
                     alt="khong tim thay anh">
-                <div class="overlay">Mua ngay</div>
+                <div class="overlay">Truy cập</div>
             </div>
             <div class="container">
-                <img src="https://mac24h.vn/images/thumbnails/350/350/detailed/50/DELL-XPS-13-9310-2021-H1_vz9k-rf_b2kn-5s.png?t=1674643979"
+                <img src="/637861589103455280_lenovo-yoga-7-14acn6-r7-5800u-xam-dd-1.webp"
                     alt="khong tim thay anh">
-                <div class="overlay">Mua ngay</div>
+                <div class="overlay">Truy cập</div>
             </div>
             <div class="container">
-                <img src="https://laptop88.vn/media/product/7665_ac_lenovo_legion_5_pro_16iah7h_82rf0002us_3.jpg"
+                <img src="/638001227463678942_asus-gaming-zephyrus-g513-xam-led-4zone-dd.webp"
                     alt="khong tim thay anh">
-                <div class="overlay">Mua ngay</div>
+                <div class="overlay">Truy cập</div>
             </div>
             <div class="container">
-                <img src="https://mac24h.vn/images/thumbnails/350/275/detailed/49/93C23359-E14F-468A-BD31-016D48D1AB06.png?t=1674486077"
+                <img src="/638011026754717687_lenovo-thinkpad-e14-gen-4-den-dd.webp"
                     alt="khong tim thay anh">
-                <div class="overlay">Mua ngay</div>
+                <div class="overlay">Truy cập</div>
             </div>
             <div class="container">
-                <img src="https://mac24h.vn/images/thumbnails/350/311/detailed/49/asus-vivobook-14-inch-x413ja-1.png?t=1674650261"
+                <img src="/638109316755419553_asus-vivobook-m513ua-ej704w-r7-5700u-bac-dd.webp"
                     alt="khong tim thay anh">
-                <div class="overlay">Mua ngay</div>
-            </div>
-            <div class="container">
-                <img src="https://mac24h.vn/images/thumbnails/350/350/detailed/49/01086755-CC92-421C-BEE2-C25C59CAF448.png?t=1674491352"
-                    alt="khong tim thay anh">
-                <div class="overlay">Mua ngay</div>
-            </div>
-            <div class="container">
-                <img src="https://mac24h.vn/images/thumbnails/350/350/detailed/48/ThinkPad_T14_Gen_2_Mac24h_dyui-wh.png?t=1674486495"
-                    alt="khong tim thay anh">
-                <div class="overlay">Mua ngay</div>
-            </div>
-            <div class="container">
-                <img src="https://mac24h.vn/images/thumbnails/350/350/detailed/50/DELL-XPS-13-9310-2021-H1_vz9k-rf_b2kn-5s.png?t=1674643979"
-                    alt="khong tim thay anh">
-                <div class="overlay">Mua ngay</div>
-            </div>
-            <div class="container">
-                <img src="https://laptop88.vn/media/product/7665_ac_lenovo_legion_5_pro_16iah7h_82rf0002us_3.jpg"
-                    alt="khong tim thay anh">
-                <div class="overlay">Mua ngay</div>
-            </div>
-            <div class="container">
-                <img src="https://mac24h.vn/images/thumbnails/350/275/detailed/49/93C23359-E14F-468A-BD31-016D48D1AB06.png?t=1674486077"
-                    alt="khong tim thay anh">
-                <div class="overlay">Mua ngay</div>
-            </div>
-            <div class="container">
-                <img src="https://mac24h.vn/images/thumbnails/350/311/detailed/49/asus-vivobook-14-inch-x413ja-1.png?t=1674650261"
-                    alt="khong tim thay anh">
-                <div class="overlay">Mua ngay</div>
+                <div class="overlay">Truy cập</div>
             </div>
             <div class="container">
                 <img src="https://mac24h.vn/images/thumbnails/350/350/detailed/49/01086755-CC92-421C-BEE2-C25C59CAF448.png?t=1674491352"
                     alt="khong tim thay anh">
-                <div class="overlay">Mua ngay</div>
+                <div class="overlay">Truy cập</div>
+            </div>
+            <div class="container">
+                <img src="/638140609349993037_dell-gaming-g15-5515-xam-dd-rtx3050.webp"
+                    alt="khong tim thay anh">
+                <div class="overlay">Truy cập</div>
+            </div>
+            <div class="container">
+                <img src="/638140640007038690_asus-tuf-gaming-fa507-xam-dd-rtx3050.webp"
+                    alt="khong tim thay anh">
+                <div class="overlay">Truy cập</div>
+            </div>
+            <div class="container">
+                <img src="https://laptop88.vn/media/product/7665_ac_lenovo_legion_5_pro_16iah7h_82rf0002us_3.jpg"
+                    alt="khong tim thay anh">
+                <div class="overlay">Truy cập</div>
+            </div>
+            <div class="container">
+                <img src="https://mac24h.vn/images/thumbnails/350/275/detailed/49/93C23359-E14F-468A-BD31-016D48D1AB06.png?t=1674486077"
+                    alt="khong tim thay anh">
+                <div class="overlay">Truy cập</div>
+            </div>
+            <div class="container">
+                <img src="https://mac24h.vn/images/thumbnails/350/311/detailed/49/asus-vivobook-14-inch-x413ja-1.png?t=1674650261"
+                    alt="khong tim thay anh">
+                <div class="overlay">Truy cập</div>
+            </div>
+            <div class="container">
+                <img src="https://mac24h.vn/images/thumbnails/350/350/detailed/49/01086755-CC92-421C-BEE2-C25C59CAF448.png?t=1674491352"
+                    alt="khong tim thay anh">
+                <div class="overlay">Truy cập</div>
             </div>
         </div>
     </div>
-
+    <div class="footer">
+        Create by Nguyễn Duy Hiếu
+    </div>
 </body>
 
 </html>
