--- a/index.html
+++ b/index.html
@@ -11,275 +11,307 @@
     <title>Fly Shop</title>
     <style>
         body {
-    margin: 0;
-    padding: 0;
-    font-family: "Lato", Helvetica, Arial;
-  	font-size: 16px;
-}
-.menutrai h2{
-  box-shadow: 0 2px 1px;
-  padding: 10px;
-  margin-left: -120px;
-  max-width: 150px;
-}
-.header {
-    text-align: center;
-    box-shadow: 0 0px 0px;
-    padding: 20px;
-    background-color:#ffffff;
-    font-style: Arial;
-    position: relative;
-}
-h1{
-font-size: 3rem;
-}
-.boctrai{
-  display: flex;
-  justify-content: end;
-  margin-left: 50px;
-}
-.menutrai{
-  display: flex;
-  justify-content: start;
-  min-width: 250px;
-  padding: 20px;
-  flex-direction: column;
-  
-}
-.menutrai a{
-   display:flex;
-   justify-content: end;
-   color: aqua;
-   text-decoration: none;
-}
-.menutrai ul{
-  margin-left: -60px;
-  max-width: 150px;
-}
-.menutrai li{
-display: flex;
-align-items: end;
-padding: 10px;
-margin-left: -97px;
-box-shadow: 0 0px 5px;
-}
-.bocform{
-  margin-top: 100px;
-}
-.hangngang{
-  display: flex;
-  justify-content: space-evenly;
-  margin-left: -75px;
-}
-.contact{
-  display: flex;
-  flex-direction: column;
-}
-.text{
-  padding: 700px;
-}
-.den{
-  color: #5c3232;
-  background-color: #807777;
-  box-shadow: 5px 5px 5px;
-}
-.footer {
-  background-color: #000000;
-  color: #fffefe;
-  text-align: center;
-  padding: 15px;
-  padding: 15px;
-  margin-top: 50px;
-}
-.canletrang{
-  margin-top: -360px;
-  margin-left: 200px;
-}
-.canletrang h2{
-  padding-top: 20px ;
+            margin: 0;
+            padding: 0;
+            font-family: "Lato", Helvetica, Arial;
+            font-size: 16px;
+        }
 
-}
-.canletrang img{
-  margin-left: -400px;
-}
-.canchu{
-  max-width: 600px;
-}
-.but{
-  display: flex;
-  text-decoration: none;
-  border: none;
-  background-color: #fffefe;
-  font-size: 15px;
-}
-.cangiua img {
-    width: 250px;
-    height: 200px;
-    margin: 10px;
-    transition: all .5s ease;
-    border: 3px solid #ddd;
-}
-.container {
-    position: relative;
-    overflow: hidden;
-  }
-  .overlay {
-    position: absolute; 
-    bottom: 15px; 
-    background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.5); /* Black see-through */
-    color: #f1f1f1; 
-    width: 125%;
-    transition: 0.5s ease;
-    opacity:0;
-    color: white;
-    font-size: 19px;
-    text-align: center;
-    margin-left: -30px; 
-    overflow: hidden;
-  }
-  
-  .container:hover .overlay {
-    opacity: 1;
-    cursor: pointer;
-  }
-.cangiua {
-    display: flex;
-    width: 100vw;
-    justify-content: center;
-    margin-top: -374px;
-    margin-left: -150px;
-}
-.bocanh {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    max-width: 700px;
-}
+        .menutrai h2 {
+            box-shadow: 0 2px 1px;
+            padding: 10px;
+            margin-left: -120px;
+            max-width: 150px;
+        }
 
-.cangiua img:hover {
-    transform: scale(1.4);
-    transition: all .3s ease;
-    /* cỡ zoom khi di chuột vào */
-    cursor: pointer;
-}
+        .header {
+            text-align: center;
+            box-shadow: 0 0px 0px;
+            padding: 20px;
+            background-color: #ffffff;
+            font-style: Arial;
+            position: relative;
+        }
 
-.topnav {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    box-shadow: 0px 0px 1px#000;
-}
+        h1 {
+            font-size: 3rem;
+        }
 
-.topnav a {
-    float: left;
-    display: flex;
-    color: #000000;
-    text-align: center;
-    padding: 14px 14px;
-    text-decoration: none;
-    background-color:#ffffff;
-    min-width: 200;
-}
+        .boctrai {
+            display: flex;
+            justify-content: end;
+            margin-left: 50px;
+        }
 
-/* thay đổi màu khi di chuột */
-.topnav a:hover {
-    background-color:#807777;
-    color:  #000000;
-    cursor: pointer;
-}
+        .menutrai {
+            display: flex;
+            justify-content: start;
+            min-width: 250px;
+            padding: 20px;
+            flex-direction: column;
 
-.menu ul {
-    padding-inline-start: 0px;
-    list-style-type: none;
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
+        }
 
-.menu li {
-    color: #fffefe;
-    position: relative;
-}
+        .menutrai a {
+            display: flex;
+            justify-content: end;
+            color: aqua;
+            text-decoration: none;
+        }
 
-.menu ul li>.sub-menu {
-    display: none;
-    position: absolute;
-}
+        .menutrai ul {
+            margin-left: -60px;
+            max-width: 150px;
+        }
 
-.sub-menu {
-    display: none;
-    position: absolute;
-}
+        .menutrai li {
+            display: flex;
+            align-items: end;
+            padding: 10px;
+            margin-left: -97px;
+            box-shadow: 0 0px 5px;
+        }
 
-.menu ul li:hover .sub-menu {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 50px;
-    cursor: pointer;
-}
-.dropbtn {
-    background-color: #ffffff;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    transition: 0.5s ease;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-    transition: 0.5s ease;
-  }
-.sub-menu {
-    display: none;
-    position: absolute;
-}
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #ffffff;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    text-align: center;
-    transition: 0.5s ease;
+        .bocform {
+            margin-top: 100px;
+        }
 
-  }
-  .dropdown-content ul{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: 0.8s ease;
-  }
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    min-width: 120px;
-    text-align: center;
-    transition: 0.8s ease;
-  }
-  .dropdown-content a:hover {
-    background-color: #ffffff;
-    text-align: center;
-    transition: 0.8s ease;
-    cursor: pointer;
-}
-  .dropdown:hover .dropdown-content {
-    display: flex;
-    transition: 0.8s ease;
-    cursor: pointer;
-} 
-  .dropdown:hover .dropbtn {
-    background-color:  #ffffff;
-    color: rgb(46, 27, 156);
-    transition: 0.8s ease;
-    cursor: pointer;
-}
+        .hangngang {
+            display: flex;
+            justify-content: space-evenly;
+            margin-left: -75px;
+        }
 
+        .contact {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .text {
+            padding: 700px;
+        }
+
+        .den {
+            color: #5c3232;
+            background-color: #807777;
+            box-shadow: 5px 5px 5px;
+        }
+
+        .footer {
+            background-color: #000000;
+            color: #fffefe;
+            text-align: center;
+            padding: 15px;
+            padding: 15px;
+            margin-top: 50px;
+        }
+
+        .canletrang {
+            margin-top: -360px;
+            margin-left: 200px;
+        }
+
+        .canletrang h2 {
+            padding-top: 20px;
+
+        }
+
+        .canletrang img {
+            margin-left: -400px;
+        }
+
+        .canchu {
+            max-width: 600px;
+        }
+
+        .but {
+            display: flex;
+            text-decoration: none;
+            border: none;
+            background-color: #fffefe;
+            font-size: 15px;
+        }
+
+        .cangiua img {
+            width: 250px;
+            height: 200px;
+            margin: 10px;
+            transition: all .5s ease;
+            border: 3px solid #ddd;
+        }
+
+        .container {
+            position: relative;
+            overflow: hidden;
+        }
+
+        .overlay {
+            position: absolute;
+            bottom: 15px;
+            background: rgb(0, 0, 0);
+            background: rgba(0, 0, 0, 0.5);
+            /* Black see-through */
+            color: #f1f1f1;
+            width: 125%;
+            transition: 0.5s ease;
+            opacity: 0;
+            color: white;
+            font-size: 19px;
+            text-align: center;
+            margin-left: -30px;
+            overflow: hidden;
+        }
+
+        .container:hover .overlay {
+            opacity: 1;
+            cursor: pointer;
+        }
+
+        .cangiua {
+            display: flex;
+            width: 100vw;
+            justify-content: center;
+            margin-top: -374px;
+            margin-left: -150px;
+        }
+
+        .bocanh {
+            margin-top: 50px;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            align-items: center;
+            max-width: 700px;
+        }
+
+        .cangiua img:hover {
+            transform: scale(1.4);
+            transition: all .3s ease;
+            /* cỡ zoom khi di chuột vào */
+            cursor: pointer;
+        }
+
+        .topnav {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            box-shadow: 0px 0px 1px#000;
+        }
+
+        .topnav a {
+            float: left;
+            display: flex;
+            color: #000000;
+            text-align: center;
+            padding: 14px 14px;
+            text-decoration: none;
+            background-color: #ffffff;
+            min-width: 200;
+        }
+
+        /* thay đổi màu khi di chuột */
+        .topnav a:hover {
+            background-color: #807777;
+            color: #000000;
+            cursor: pointer;
+        }
+
+        .menu ul {
+            padding-inline-start: 0px;
+            list-style-type: none;
+            text-align: center;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+
+        .menu li {
+            color: #fffefe;
+            position: relative;
+        }
+
+        .menu ul li>.sub-menu {
+            display: none;
+            position: absolute;
+        }
+
+        .sub-menu {
+            display: none;
+            position: absolute;
+        }
+
+        .menu ul li:hover .sub-menu {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 50px;
+            cursor: pointer;
+        }
+
+        .dropbtn {
+            background-color: #ffffff;
+            padding: 16px;
+            font-size: 16px;
+            border: none;
+            transition: 0.5s ease;
+        }
+
+        .dropdown {
+            position: relative;
+            display: inline-block;
+            transition: 0.5s ease;
+        }
+
+        .sub-menu {
+            display: none;
+            position: absolute;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #ffffff;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+            text-align: center;
+            transition: 0.5s ease;
+
+        }
+
+        .dropdown-content ul {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            transition: 0.8s ease;
+        }
+
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            min-width: 120px;
+            text-align: center;
+            transition: 0.8s ease;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #ffffff;
+            text-align: center;
+            transition: 0.8s ease;
+            cursor: pointer;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: flex;
+            transition: 0.8s ease;
+            cursor: pointer;
+        }
+
+        .dropdown:hover .dropbtn {
+            background-color: #ffffff;
+            color: rgb(46, 27, 156);
+            transition: 0.8s ease;
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -350,23 +382,19 @@ box-shadow: 0 0px 5px;
     <div class="cangiua">
         <div class="bocanh">
             <div class="container">
-                <img src="/637728547611527044_msi-modern-15-a5m-234vn-r5-5500u-xam-dd.webp"
-                    alt="khong tim thay anh">
+                <img src="/637728547611527044_msi-modern-15-a5m-234vn-r5-5500u-xam-dd.webp" alt="khong tim thay anh">
                 <div class="overlay">Truy cập</div>
             </div>
             <div class="container">
-                <img src="/637861589103455280_lenovo-yoga-7-14acn6-r7-5800u-xam-dd-1.webp"
-                    alt="khong tim thay anh">
+                <img src="/637861589103455280_lenovo-yoga-7-14acn6-r7-5800u-xam-dd-1.webp" alt="khong tim thay anh">
                 <div class="overlay">Truy cập</div>
             </div>
             <div class="container">
-                <img src="/638001227463678942_asus-gaming-zephyrus-g513-xam-led-4zone-dd.webp"
-                    alt="khong tim thay anh">
+                <img src="/638001227463678942_asus-gaming-zephyrus-g513-xam-led-4zone-dd.webp" alt="khong tim thay anh">
                 <div class="overlay">Truy cập</div>
             </div>
             <div class="container">
-                <img src="/638011026754717687_lenovo-thinkpad-e14-gen-4-den-dd.webp"
-                    alt="khong tim thay anh">
+                <img src="/638011026754717687_lenovo-thinkpad-e14-gen-4-den-dd.webp" alt="khong tim thay anh">
                 <div class="overlay">Truy cập</div>
             </div>
             <div class="container">
@@ -380,13 +408,11 @@ box-shadow: 0 0px 5px;
                 <div class="overlay">Truy cập</div>
             </div>
             <div class="container">
-                <img src="/638140609349993037_dell-gaming-g15-5515-xam-dd-rtx3050.webp"
-                    alt="khong tim thay anh">
+                <img src="/638140609349993037_dell-gaming-g15-5515-xam-dd-rtx3050.webp" alt="khong tim thay anh">
                 <div class="overlay">Truy cập</div>
             </div>
             <div class="container">
-                <img src="/638140640007038690_asus-tuf-gaming-fa507-xam-dd-rtx3050.webp"
-                    alt="khong tim thay anh">
+                <img src="/638140640007038690_asus-tuf-gaming-fa507-xam-dd-rtx3050.webp" alt="khong tim thay anh">
                 <div class="overlay">Truy cập</div>
             </div>
             <div class="container">
