--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>Document</title>
 </head>
 <body>
+  <p id = "text">
+       iorhmbrjeofmrbjiem
+  </p>
+  <ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+  <ul id="list">
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+      <li>Item 4</li>
+      <li>Item 5</li>
+      <li>Item 6</li>
+      <li>Item 7</li>
+  </ul>
+</ul>
     <script src="./main.js"></script>
-    <p>homework2</p>
 </body>
 </html>
