--- a/index.html
+++ b/index.html
@@ -4,25 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .red {
+            color: red;
+        }
+    </style>
 </head>
 <body>
-  <p id = "text">
-       iorhmbrjeofmrbjiem
-  </p>
-  <ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-  <ul id="list">
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-      <li>Item 4</li>
-      <li>Item 5</li>
-      <li>Item 6</li>
-      <li>Item 7</li>
-  </ul>
-</ul>
+    <div id="circle-container"></div>
     <script src="./main.js"></script>
 </body>
 </html>
