--- a/index.html
+++ b/index.html
@@ -1,84 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS DOM</title>
-    <style>
-        .box {
-            display: block;
-            background-color: #f3f3f3;
-            width: 100px;
-            height: 100px;
-            border-radius: 10px;
-            float: left;
-            margin: 5px;
-        }
-
-        .box:hover {
-            transform: scale(.9);
-            transition-duration: .5s;
-            opacity: .8;
-            cursor: pointer;
-        }
-
-        .box:active {
-            transform: scale(1.5);
-            transition-duration: .5s;
-        }
-    </style>
+    <title>Todo List</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="wrap">
-        <h1>JS DOM</h1>
-        <button id="btn">More boxes</button>
-        <h4 id="score">Total box: <span class="points">0</span></h4>
-        <div class="boxes"></div>
+    <h1>Todo List</h1>
+    <div id="add-todo">
+        <input type="text" id="new-todo-title" placeholder="Enter todo title...">
+        <button id="add-todo-btn">Add</button>
     </div>
 
-    <script>
-        let colors = [
-            '#3498db',
-            '#9b59b6',
-            '#e74c3c',
-            '#2c3e50',
-            '#d35400',
-        ];
-
-        let points = 0;
-        let boxContainer = document.querySelector('.boxes');
-        let pointsElement = document.querySelector('.points');
-        let moreBoxButton = document.querySelector('#btn');
-
-        // Tạo số lượng box ban đầu
-        createBoxes(5);
-
-        // Thêm sự kiện click vào nút More boxes
-        moreBoxButton.addEventListener('click', function() {
-            createBoxes(5);
-        });
-
-        function createBoxes(num) {
-  let startIndex = points % colors.length; // Lấy chỉ số bắt đầu lấy màu
-  for (let i = 0; i < num; i++) {
-    let box = document.createElement("div");
-    box.classList.add("box");
-    let colorIndex = (startIndex + i) % colors.length; // Lấy chỉ số màu từ mảng colors
-    let color = colors[colorIndex];
-    box.style.backgroundColor = color;
-    box.addEventListener("click", function () {
-      box.remove();
-      points--;
-      pointsElement.textContent = points;
-    });
-    boxContainer.appendChild(box);
-    points++;
-    pointsElement.textContent = points;
-  }
-}
-    </script>
+    <div id="todo-list">
+        <ul id="list"></ul>
+    </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
