--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <ul id="post-list"></ul>
 
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
